--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,8 @@ body {
 margin-top: 10px;
 }
 
-main {
+
+main > .container {
 width: auto;
 padding: 0px 15px 0px 15px;
 height: 200px;
@@ -28,14 +29,14 @@ justify-content: center;
 align-items: center;
 }
 
-main > #palavra {
+main > .container > #palavra {
 display: flex;
 justify-content: center;
 align-items: center;
 gap: 5px;
 }
 
-main > #palavra > .letra {
+main > .container > #palavra > .letra {
 background-color: white;
 border: 1px solid black;
 height: 100px;
@@ -71,12 +72,58 @@ padding: 5px;
 height: auto;
 }
 
-#letras_erradas {
+#letras-erradas {
 font-size: 20px;
 }
 
 @media (min-width: 1500px) {
     #pontos {
-        margin-top: 80px;
+        margin-top: 50px;
+    }
+
+    #letras-erradas {
+        font-size: 25px;
     }
 }
+
+@media (max-width: 994px) {
+    main > .container {
+        border: 20px solid yellow;
+        height: 170px;
+    }
+
+    main > .container > #palavra > .letra {
+        width: 50px;
+        height: 70px;
+        font-size: 45px;
+        line-height: 72px;
+    }
+}
+
+@media (max-width: 805px) {
+    main > .container {
+        border: 15px solid yellow;
+        padding: 0px 10px 0px 10px;
+        height: 140px;
+    }
+
+    main > .container > #palavra > .letra {
+      width: 35px;
+      padding: 5px;
+    }
+}
+
+@media (max-width: 550px) {
+    main > .container {
+        padding: 0px 5px 0px 5px;
+    }
+
+    main > .container > #palavra > .letra {
+        width: 30px;
+        padding: 5px;
+        height: 55px;
+        line-height: 60px;
+        font-size: 35px;
+      }
+}
+
